<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/nowidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gryffindor_house"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/house_text_size"
                    android:padding="@dimen/house_text_padding"
                    android:fontFamily="@font/algerian"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gryffindorteam"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/house_logo"/>
                <TextView
                    android:id="@+id/griffindorhouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:paddingBottom="@dimen/score_padding_bottom"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/score_text_size"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/algerian"
                    android:background="@color/button_background"
                    android:textColor="@color/button_text_color"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:text="@string/quaffle"
                    android:onClick="addOneQuaffleForGriffindors"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/second_button_margin_right"
                    android:layout_marginLeft="@dimen/second_button_margin_left"
                    android:background="@color/button_background"
                    android:fontFamily="@font/algerian"
                    android:text="@string/golden_snitch"
                    android:onClick="addOneHundredPointsGriffindors"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/imageview_height"
                android:layout_marginTop="@dimen/imageview_margin_top"
                android:src="@drawable/dividinglinewand" />

            <LinearLayout
                android:layout_width="@dimen/nowidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slytherin_house"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/house_text_size"
                    android:padding="@dimen/house_text_padding"
                    android:fontFamily="@font/algerian"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/slytherinteam"
                    android:adjustViewBounds="true"
                    android:padding="@dimen/house_logo"/>
                <TextView
                    android:id="@+id/slytherinhouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_score"
                    android:paddingBottom="@dimen/score_padding_bottom"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/score_text_size"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/algerian"
                    android:background="@color/button_background"
                    android:textColor="@color/button_text_color"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:text="@string/quaffle"
                    android:onClick="addOneQuaffleForSlytherins"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/second_button_margin_right"
                    android:layout_marginLeft="@dimen/second_button_margin_left"
                    android:background="@color/button_background"
                    android:fontFamily="@font/algerian"
                    android:text="@string/golden_snitch"
                    android:onClick="addOneHundredPointsToSlyttherins"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Obliviate Score"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:background="#c8b594"
            android:gravity="center"
            android:onClick="reset"/>

    </RelativeLayout>

</ScrollView>